--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -120,4 +120,30 @@
 
     </GridLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingTop="16sp"
+        android:gravity="bottom|right">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:onClick="openPrivacyPolicy"
+            android:text="@string/privacy_policy"
+            android:textSize="12sp"
+            android:id="@+id/textView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
+
+        <ImageView
+            android:layout_width="8sp"
+            android:layout_height="8sp"
+            android:layout_margin="4sp"
+            android:src="@android:drawable/ic_dialog_info"/>
+
+    </LinearLayout>
+
+
 </LinearLayout>
